= 0.16.0 =
*(released: NOT YET!)*

* Added option to specify CDN urls in Alter HTML. Thanks to Gunnar Peipman from Estonia for suggesting this.
* Added link to Optimole in the "Don't despair - You have options!" message
* Fixed unexpected output upon reactivation
* Direct Nginx users to Nginx FAQ section on welcome page

= 0.15.3 =
*(released: 19 sep 2019)*

* Fixed fatal error upon activation for systems which cannot use document root for structuring (rare)

= 0.15.2 =

* Fixed the bug when File extension was set to "Set to .webp". It was buggy when file extension contained uppercase letters.

= 0.15.1 =
*(released: 17 sep 2019)*

* Bug alert: Added alert about a bug when destination folder is set to "mingled" and File extension is set to "Set to .webp"
* Bugfix: Plugin URL pointed to webpexpress - it should point to parent. This gave trouble with images located in plugins. Thanks to Guillaume Meyer from Switzerland for discovering and reporting.
* Bugfix: Images with uppercase chars in extension did not get Vary:Accept
* Bugfix: There were issues with "All content" and destination:document-root when webp-realizer is activated

= 0.15.0 =
*(released: 17 sep 2019)*

* Provided test-buttons for checking if the redirects works.
* You can now choose which folders WebP Express is active in. Ie "Uploads and Themes".
* You can now choose an alternative file structure for the webps which does not rely on DOCUMENT_ROOT being available.
* WebP Express can now handle when wp-content is symlinked.
* The .htaccess rules are now divided across folders. Some rules are needed where the source files are located, some where the webp files are located.
* Added option to convert only PNG files
* And a couple of bugfixes.

For more info, see the closed issues on the 0.15.0 milestone on the github repository: https://github.com/rosell-dk/webp-express/milestone/22?closed=1

= 0.14.22 =
*(released: 4 aug 2019)*
