@@ -14,7 +14,7 @@ function openBulkConvertPopup() {
                 html += webpexpress_escapeHTML(response['data']);
             }
             document.getElementById('bulkconvertcontent').innerHTML = html;
-            return
+            return;
         }
         var bulkInfo = {
             'groups': JSON.parse(response),
@@ -246,6 +246,7 @@ function convertNextInBulkQueue() {
         var filename = group.files[bulkInfo.filePointer];
 
         var result = JSON.parse(response);
+
         //console.log(result);
 
         var html = '';
@@ -255,6 +256,13 @@ function convertNextInBulkQueue() {
         // uncommented until I'm certain that security is in place
         //var htmlViewLog = '&nbsp;&nbsp;<a style="cursor:pointer" onclick="webpexpress_viewLog(' + bulkInfo.groupPointer + ',' + bulkInfo.filePointer  + ')">view log</a>';
         if (result['success']) {
+
+            //console.log('nonce tick:' + result['nonce-tick']);
+
+            if (result['new-convert-nonce']) {
+                //console.log('new convert nonce:' + result['new-convert-nonce']);
+                window.webpExpress['ajax-nonces']['convert'] = result['new-convert-nonce'];
+            }
 
             var orgSize = result['filesize-original'];
             var webpSize = result['filesize-webp'];
@@ -277,6 +285,14 @@ function convertNextInBulkQueue() {
                 getReductionHtml(orgSize, webpSize, 'Size of original', 'Size of webp')
         } else {
             html += ' <span style="color:red">failed</span>' + htmlViewLog;
+
+            if (result['msg']) {
+                logLn(html);
+                logLn('<br><br><span style="color:red; font-size:15px">' + webpexpress_escapeHTML(result['msg']) + '</span>');
+            }
+            if (result['stop']) {
+                return;
+            }
             /*
             if (result['msg'] != '') {
                 html += ' <span style="">' + result['msg'] + '</span>';
