@@ -2,9 +2,10 @@
 *(released: NOT YET!)*
 
 * Added option to specify CDN urls in Alter HTML. Thanks to Gunnar Peipman from Estonia for suggesting this.
-* Added link to Optimole in the "Don't despair - You have options!" message
-* Fixed unexpected output upon reactivation
 * Direct Nginx users to Nginx FAQ section on welcome page
+* Fixed Bulk Conversion halting due to nonce expiry
+* Fixed unexpected output upon reactivation
+* Added affiliate link to [Optimole](https://optimole.pxf.io/20b0M) in the "Don't despair - You have options!" message
 
 = 0.15.3 =
 *(released: 19 sep 2019)*
